k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productservice-service
spec:
  selector:
    app: productservice
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
